# sekhmet-math

./: .gitmodules  CMakeLists.txt
math/: CMakeLists.txt  bounds.hpp  math.hpp  matrix.hpp  quaternion.hpp  random.hpp  scalar.hpp  screen.hpp  vector.hpp
math/detail/: CMakeLists.txt  api.hpp  blend.hpp  define.hpp  errfn.hpp  expon.hpp  fclass.hpp  fcmp_mat.hpp  fcmp_vec.hpp  fmanip.hpp  fwd.hpp  geom.hpp  hypbl.hpp  inverse.hpp  math_fwd.hpp  mbase.hpp  neari.hpp  power.hpp  shuffle.hpp  sysrandom.cpp  sysrandom.hpp  trans.hpp  trig.hpp  type_mat.hpp  type_vec.hpp  utility.hpp  xoroshiro.hpp
math/detail/vector/: CMakeLists.txt  operators.hpp  shuffle.hpp  type.hpp
test/: CMakeLists.txt  main.cpp
